# bevy-weapon-customisation

./: Cargo.toml  flake.nix
assets/: FN_Scar_rigged_textured.glb
src/: main.rs
