[package]
name = "weapon_customisation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17" }
bevy_panorbit_camera = { version = "0.31" }

[features]
gizmos = []

[target.'cfg(target_os="linux")'.dependencies.bevy]
features = ["wayland"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
